--- a/test/results/units.html
+++ b/test/results/units.html
@@ -10,13 +10,13 @@
     <section>
       <header class="overview">
         <div class="browser">Browser: Chrome 56.0.2924 (Mac OS X 10.12.3)</div>
-        <div class="timestamp">Timestamp: 2/17/2017, 11:52:49 AM</div>
+        <div class="timestamp">Timestamp: 2/21/2017, 2:43:08 PM</div>
         <p class="results">
           58 tests / 
           0 errors / 
           0 failures / 
           0 skipped / 
-          runtime: 1.26s
+          runtime: 1.054s
         </p>
       </header>
       <div class="spec spec--pass" style="">
@@ -34,7 +34,7 @@
             <p class="spec__suite">App Module: &raquo; Dependencies:</p>
             <em class="spec__descrip">should have ngSanitize as a dependency</em>
           </div>
-          <div class="spec__status">Passed in 0s</div>
+          <div class="spec__status">Passed in 0.002s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -43,7 +43,7 @@
             <p class="spec__suite">App Module: &raquo; Dependencies:</p>
             <em class="spec__descrip">should have services.utils as a dependency</em>
           </div>
-          <div class="spec__status">Passed in 0.001s</div>
+          <div class="spec__status">Passed in 0s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -79,7 +79,7 @@
             <p class="spec__suite">App Module: &raquo; Dependencies:</p>
             <em class="spec__descrip">should have services.navigation as a dependency</em>
           </div>
-          <div class="spec__status">Passed in 0.003s</div>
+          <div class="spec__status">Passed in 0s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -88,7 +88,7 @@
             <p class="spec__suite">App Module: &raquo; Dependencies:</p>
             <em class="spec__descrip">should have app.enums as a dependency</em>
           </div>
-          <div class="spec__status">Passed in 0s</div>
+          <div class="spec__status">Passed in 0.001s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -115,7 +115,7 @@
             <p class="spec__suite">validate enums</p>
             <em class="spec__descrip">should be exist</em>
           </div>
-          <div class="spec__status">Passed in 0.015s</div>
+          <div class="spec__status">Passed in 0.016s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -124,7 +124,7 @@
             <p class="spec__suite">validate data</p>
             <em class="spec__descrip">should have valid work.json data</em>
           </div>
-          <div class="spec__status">Passed in 0.001s</div>
+          <div class="spec__status">Passed in 0s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -133,7 +133,7 @@
             <p class="spec__suite">validate data</p>
             <em class="spec__descrip">should have valid humans.json data</em>
           </div>
-          <div class="spec__status">Passed in 0s</div>
+          <div class="spec__status">Passed in 0.001s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -151,7 +151,7 @@
             <p class="spec__suite">Unit: Testing WorkCtrl</p>
             <em class="spec__descrip">should be properly initialized</em>
           </div>
-          <div class="spec__status">Passed in 0.024s</div>
+          <div class="spec__status">Passed in 0.022s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -160,7 +160,7 @@
             <p class="spec__suite">Unit: Testing WorkCtrl</p>
             <em class="spec__descrip">should load a project</em>
           </div>
-          <div class="spec__status">Passed in 0.009s</div>
+          <div class="spec__status">Passed in 0.011s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -169,7 +169,7 @@
             <p class="spec__suite">Unit: Testing WorkCtrl</p>
             <em class="spec__descrip">should projectIncrement</em>
           </div>
-          <div class="spec__status">Passed in 0.008s</div>
+          <div class="spec__status">Passed in 0.006s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -178,7 +178,7 @@
             <p class="spec__suite">Unit: Testing WorkCtrl</p>
             <em class="spec__descrip">should unload project</em>
           </div>
-          <div class="spec__status">Passed in 0.006s</div>
+          <div class="spec__status">Passed in 0.005s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -205,7 +205,7 @@
             <p class="spec__suite">A tag override for _blank targets</p>
             <em class="spec__descrip">should add a blank target</em>
           </div>
-          <div class="spec__status">Passed in 0.004s</div>
+          <div class="spec__status">Passed in 0.003s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -214,7 +214,7 @@
             <p class="spec__suite">A tag override for _blank targets</p>
             <em class="spec__descrip">should not add a blank target to link without http in front</em>
           </div>
-          <div class="spec__status">Passed in 0.003s</div>
+          <div class="spec__status">Passed in 0.002s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -223,7 +223,7 @@
             <p class="spec__suite">A tag override for _blank targets</p>
             <em class="spec__descrip">should not add a blank target to link with existing target</em>
           </div>
-          <div class="spec__status">Passed in 0.006s</div>
+          <div class="spec__status">Passed in 0.005s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -232,7 +232,7 @@
             <p class="spec__suite">Unit: Testing directives.image</p>
             <em class="spec__descrip">should have caption</em>
           </div>
-          <div class="spec__status">Passed in 0.004s</div>
+          <div class="spec__status">Passed in 0.005s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -250,7 +250,7 @@
             <p class="spec__suite">Unit: Testing directives.image</p>
             <em class="spec__descrip">should have no caption</em>
           </div>
-          <div class="spec__status">Passed in 0.005s</div>
+          <div class="spec__status">Passed in 0.004s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -268,7 +268,7 @@
             <p class="spec__suite">utilHover directive</p>
             <em class="spec__descrip">should be configurable via options attribute</em>
           </div>
-          <div class="spec__status">Passed in 0.006s</div>
+          <div class="spec__status">Passed in 0.005s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -277,7 +277,7 @@
             <p class="spec__suite">Unit: Testing directives.youtubeEmbed</p>
             <em class="spec__descrip">should embed iframe, with src including video id</em>
           </div>
-          <div class="spec__status">Passed in 0.829s</div>
+          <div class="spec__status">Passed in 0.726s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -286,7 +286,7 @@
             <p class="spec__suite">Unit: Testing directives.videoJsEmbed</p>
             <em class="spec__descrip">videojs lib hould be loaded</em>
           </div>
-          <div class="spec__status">Passed in 0.099s</div>
+          <div class="spec__status">Passed in 0.06s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -295,7 +295,7 @@
             <p class="spec__suite">Unit: Testing directives.videoJsEmbed</p>
             <em class="spec__descrip">should embed video sources</em>
           </div>
-          <div class="spec__status">Passed in 0.042s</div>
+          <div class="spec__status">Passed in 0.024s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -304,7 +304,7 @@
             <p class="spec__suite">getById</p>
             <em class="spec__descrip">should filter a single item out based on id = '2'</em>
           </div>
-          <div class="spec__status">Passed in 0.002s</div>
+          <div class="spec__status">Passed in 0.001s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -313,7 +313,7 @@
             <p class="spec__suite">getById</p>
             <em class="spec__descrip">should not break with undefined id</em>
           </div>
-          <div class="spec__status">Passed in 0.002s</div>
+          <div class="spec__status">Passed in 0s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -322,7 +322,7 @@
             <p class="spec__suite">unsafeHtml</p>
             <em class="spec__descrip">should filter allow unsafe HTML</em>
           </div>
-          <div class="spec__status">Passed in 0.005s</div>
+          <div class="spec__status">Passed in 0.002s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -349,7 +349,7 @@
             <p class="spec__suite">assignBtnHover</p>
             <em class="spec__descrip">should attached add/remove classes on hover</em>
           </div>
-          <div class="spec__status">Passed in 0.004s</div>
+          <div class="spec__status">Passed in 0.003s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -358,7 +358,7 @@
             <p class="spec__suite">assignBtnHover</p>
             <em class="spec__descrip">should attached add/remove classes on hover - for an inner target</em>
           </div>
-          <div class="spec__status">Passed in 0.008s</div>
+          <div class="spec__status">Passed in 0.012s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -367,7 +367,7 @@
             <p class="spec__suite">Window Scrolling &raquo; getScrollTop</p>
             <em class="spec__descrip">should get accurate scrollTop value</em>
           </div>
-          <div class="spec__status">Passed in 0.008s</div>
+          <div class="spec__status">Passed in 0.007s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -376,7 +376,7 @@
             <p class="spec__suite">Window Scrolling &raquo; scrollAnimateTo Suite &raquo; scrollAnimateTo</p>
             <em class="spec__descrip">should change page scroll based on numeric value</em>
           </div>
-          <div class="spec__status">Passed in 0.017s</div>
+          <div class="spec__status">Passed in 0.008s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -385,7 +385,7 @@
             <p class="spec__suite">Window Scrolling &raquo; scrollAnimateTo Suite &raquo; scrollAnimateTo</p>
             <em class="spec__descrip">should change page scroll based on anchor</em>
           </div>
-          <div class="spec__status">Passed in 0.009s</div>
+          <div class="spec__status">Passed in 0.008s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -394,7 +394,7 @@
             <p class="spec__suite">Window Scrolling &raquo; scrollAnimateTo Suite &raquo; scrollAnimateTo</p>
             <em class="spec__descrip">should dispatch complete event</em>
           </div>
-          <div class="spec__status">Passed in 0.008s</div>
+          <div class="spec__status">Passed in 0.007s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -421,7 +421,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">should initialize</em>
           </div>
-          <div class="spec__status">Passed in 0.012s</div>
+          <div class="spec__status">Passed in 0.009s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -430,7 +430,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">should have a toggle button, slide targets, and a cover</em>
           </div>
-          <div class="spec__status">Passed in 0.002s</div>
+          <div class="spec__status">Passed in 0.001s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -439,7 +439,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">should slide open when calling .open()</em>
           </div>
-          <div class="spec__status">Passed in 0.005s</div>
+          <div class="spec__status">Passed in 0.004s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -448,7 +448,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">should slide closed when calling .close()</em>
           </div>
-          <div class="spec__status">Passed in 0.006s</div>
+          <div class="spec__status">Passed in 0.003s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -457,7 +457,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">should slide open when clicking toggle button (when closed)</em>
           </div>
-          <div class="spec__status">Passed in 0.004s</div>
+          <div class="spec__status">Passed in 0.002s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -466,7 +466,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">should slide closed when clicking content cover (when open)</em>
           </div>
-          <div class="spec__status">Passed in 0.015s</div>
+          <div class="spec__status">Passed in 0.01s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -475,7 +475,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">should slide closed when clicking inner link in nav (when open)</em>
           </div>
-          <div class="spec__status">Passed in 0.009s</div>
+          <div class="spec__status">Passed in 0.008s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -484,7 +484,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">should reflect state via getIsOpen</em>
           </div>
-          <div class="spec__status">Passed in 0.006s</div>
+          <div class="spec__status">Passed in 0.004s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -493,7 +493,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">should close when orientation changes</em>
           </div>
-          <div class="spec__status">Passed in 0.009s</div>
+          <div class="spec__status">Passed in 0.005s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -502,7 +502,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">cover should be draggable</em>
           </div>
-          <div class="spec__status">Passed in 0.006s</div>
+          <div class="spec__status">Passed in 0.005s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -529,7 +529,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">cover should be draggable, and close if dragged to left &gt; 25%</em>
           </div>
-          <div class="spec__status">Passed in 0.004s</div>
+          <div class="spec__status">Passed in 0.003s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
